--- a/ContactApp/jsp/styles.css
+++ b/ContactApp/jsp/styles.css
@@ -1,20 +1,26 @@
-table, td, th {
-  border: 1px solid black;
-}
-
 table {
   border-collapse: collapse;
-  background-color: yellow;
+  background-color: white;
   width: 30%;
   text-align:center;
+  overflow-x: auto;
 }
 
-th {
-  height: 50px;
-}
-#button{
-	
+
+
+.button{
+	background-color: #4CAF50;
+  color: white;
+  padding: 20px;
+  text-align: center;
 	margin: 0 auto;
-	display: flex;
-	justify-content: center;
+	display: inline-block;
+  margin: 4px 2px;
+	justify-content: right;
+}
+.button1{
+  width: 50px;
+  height: 50px;
+  background: #69F706;
+  border-radius: 50%;
 }
