--- a/MockExam/Login.css
+++ b/MockExam/Login.css
@@ -12,6 +12,14 @@
 .button4 {
   border-radius: 12px;
 }*/
+input[type=text] {
+  width: 50%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  box-sizing: border-box;
+  border: none;
+  border-bottom:2px solid red;;
+}
 .button {
   padding: 15px 25px;
   font-size: 24px;
@@ -45,4 +53,34 @@ body {
 .fontbig {
 	font-style: italic;
     font-size: xx-large;
+}
+textarea 
+{
+    -webkit-writing-mode: horizontal-tb !important;
+    text-rendering: auto;
+    color: -internal-light-dark-color(black, white);
+    letter-spacing: normal;
+    word-spacing: normal;
+    text-transform: none;
+    text-indent: 0px;
+    text-shadow: none;
+    display: inline-block;
+    text-align: start;
+    -webkit-appearance: textarea;
+    background-color: -internal-light-dark-color(white, black);
+    -webkit-rtl-ordering: logical;
+    flex-direction: column;
+    resize: auto;
+    cursor: text;
+    white-space: pre-wrap;
+    overflow-wrap: break-word;
+    box-sizing: border-box;
+    margin: 0em;
+    font: 400 13.3333px Arial;
+    font-size: 16px;
+    border-width: 1px;
+    border-style: solid;
+    border-color: rgb(169, 169, 169);
+    border-image: initial;
+    padding: 2px 0px 0px 2px;
 }
