--- a/MockExam/option.css
+++ b/MockExam/option.css
@@ -1,20 +1,36 @@
-button {
-    background-color: #4CAF50;
-    border: none;
-    color: white;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: block;
-    font-size: 20px;
-    margin: auto;
-    width: auto;
+.button {
+  padding: 15px 25px;
+  font-size: 24px;
+  text-align: center;
+  cursor: pointer;
+  outline: none;
+  color: #fff;
+  background-color: #4CAF50;
+  border: none;
+  border-radius: 15px;
+  box-shadow: 0 9px #999;
+}
+
+.button:hover {background-color: #3e8e41}
+
+.button:active {
+  background-color: #3e8e41;
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);
+}
+.container {
+  text-align :center;
+  width: 97%;
+  height: 97%;
+  padding: 10px 10px;
+
 }
 body {
     margin: 0;
     padding-top: 100px;
     background-color: lightblue;
 }
+
 
 .fontbig {
 	font-style: italic;
