--- a/MockExam/option.css
+++ b/MockExam/option.css
@@ -26,9 +26,9 @@
 
 }
 body {
-    margin: 0;
+     */
     padding-top: 100px;
-    background-color: lightblue;
+    border: solid mediumseagreen;
 }
 
 
