--- a/MockExam/Login.css
+++ b/MockExam/Login.css
@@ -1,24 +1,10 @@
-/*.button {
-  background-color: #4CAF50;
-  border: none;
-  color: white;
-  padding: 20px;
-  text-align: center;
-  text-decoration: inherit;
-  display: inline-block;
-  font-size: 20px;
-  margin: 4px 2px;
-}
-.button4 {
-  border-radius: 12px;
-}*/
 input[type=text] {
   width: 50%;
   padding: 12px 20px;
   margin: 8px 0;
   box-sizing: border-box;
   border: none;
-  border-bottom:2px solid red;;
+  border-bottom:2px solid red;
 }
 .button {
   padding: 15px 25px;
@@ -33,22 +19,21 @@ input[type=text] {
   box-shadow: 0 9px #999;
 }
 
-.button:hover {background-color: #3e8e41}
+/*.button:hover {background-color: #3e8e41}*/
 
 .button:active {
-  background-color: #3e8e41;
+  /*background-color: #3e8e41;*/
   box-shadow: 0 5px #666;
   transform: translateY(4px);
 }
 div{
 	text-align: center;
+  height: 50px;
 }
 body {
-    height: 624px;
-    border: solid teal;
-    margin: 10;
+    height: 626px;
+    border: solid mediumseagreen;
     padding-top: 100px;
-    background-color: lightslategray;
 }
 .fontbig {
 	font-style: italic;
