--- a/MockExam/option.css
+++ b/MockExam/option.css
@@ -31,8 +31,22 @@ body {
     border: solid mediumseagreen;
 }
 
-
 .fontbig {
 	font-style: italic;
     font-size: xx-large;
+}
+
+hr {
+  width: 80%;
+  height: 8px;
+  margin-left: auto;
+  margin-right: auto;
+  background-color:solid mediumseagreen;
+  border: 0 none;
+  margin-top: 100px;
+  margin-bottom:100px;
+
+}
+.inset {
+  border-style: inset;
 }
