--- a/MockExam/src/main/webapp/Login.css
+++ b/MockExam/src/main/webapp/Login.css
@@ -25,6 +25,10 @@ input[type=text] {
 }
 div{
 	text-align: center;
+    margin-left: 21%;
+    margin-top: 12%;
+    margin-right: 25%;
+    border: double;
 
 }
 .container {
