--- a/MockExam/src/main/webapp/Style.css
+++ b/MockExam/src/main/webapp/Style.css
@@ -3,7 +3,17 @@ body {
     padding: 75px;
 }
 .button {
-  padding: 15px 25px;
+  height: 40px;
+     width: 180px;
+     border: none;
+     border-radius: 20px;
+     background: linear-gradient(to left, #ab68ca, #de67a3);
+     color: #fff;
+     font-weight: bolder;
+     margin-top: 30px;
+     cursor: pointer;
+     outline: none;
+  /*padding: 15px 25px;
   font-size: 24px;
   text-align: center;
   cursor: pointer;
@@ -12,7 +22,7 @@ body {
   background-color: #4CAF50;
   border: none;
   border-radius: 15px;
-  box-shadow: 0 9px #999;
+  box-shadow: 0 9px #999;*/
 }
 
 .button:hover {background-color: #3e8e41}
@@ -88,3 +98,10 @@ p.one{
 .inset {
   border-style: inset;
 }
+.wrapper {
+     width: 900px;
+     height: 600px;
+     position: relative;
+     margin: 3% auto;
+     box-shadow: 2px 18px 70px 0px #9d9d9d;
+     overflow: hidden;
