--- a/MockExam/src/main/webapp/Sample.css
+++ b/MockExam/src/main/webapp/Sample.css
@@ -2,6 +2,14 @@ body {
      font-family: 'Raleway', sans-serif;
      background-color: #e7e7e7;
 }
+.hello {
+  width: 50%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  box-sizing: border-box;
+  border: none;
+  border-bottom:2px solid darkmagenta;
+}
  .wrapper {
      width: 800px;
      height: 600px;
