--- a/MockExam/src/main/webapp/Style.css
+++ b/MockExam/src/main/webapp/Style.css
@@ -13,16 +13,37 @@ body {
      margin-top: 30px;
      cursor: pointer;
      outline: none;
-  /*padding: 15px 25px;
-  font-size: 24px;
-  text-align: center;
-  cursor: pointer;
-  outline: none;
-  color: #fff;
-  background-color: #4CAF50;
+}
+ .text input {
+     margin-top: 30px;
+     height: 40px;
+     width: 300px;
+     border-radius: 2px;
+     border: none;
+     background-color: #444;
+     opacity: 0.6;
+     outline: none;
+     color: #fff;
+     padding-left: 10px;
+}
+input[type=text] {
+  width: 50%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  box-sizing: border-box;
   border: none;
-  border-radius: 15px;
-  box-shadow: 0 9px #999;*/
+  border-bottom:2px solid darkmagenta;
+}
+ .login-text {
+     width: 800px;
+     height: 450px;
+     background: linear-gradient(to left, #ab68ca, #de67a3);
+     position: absolute;
+     top: -300px;
+     box-sizing: border-box;
+     padding: 6%;
+     transition: all 0.5s ease-in-out;
+     z-index: 11;
 }
 
 .button:hover {background-color: #3e8e41}
