--- a/ContactApp/style1.css
+++ b/ContactApp/style1.css
@@ -239,3 +239,29 @@ a.updatebutton
   box-shadow: 0 3px rgba(58,87,175,.75); 
   position: relative;  
 }
+input.registerbutton
+{
+  font-size: 22px;
+  font-weight: 30;
+  color: white; 
+  margin-top:-120px;
+  margin-left:490px;
+  margin-bottom:10px;
+  padding-top: 10px;
+  padding-right: 20px;
+  padding-bottom: -10px;
+  padding-left: 30px;
+  display: inline-block;
+  text-decoration: none;
+  width: 120px; height: 50px; 
+  border-radius: 5px; 
+  background-color: #3a57af; 
+  box-shadow: 0 3px rgba(58,87,175,.75); 
+  position: relative; 
+}
+input.registerbutton:hover {
+  top: 3px;
+  background-color:#2e458b 
+  box-shadow: none;
+  
+}
