--- a/ContactApp/style1.css
+++ b/ContactApp/style1.css
@@ -168,8 +168,9 @@ a.header
 }
 a.tabledata
 {
-
+  font-color: #4c4c4c;
   text-decoration:none;
+
 }
 p.credits
 {
@@ -247,7 +248,7 @@ a.updatebutton
 }
 input.registerbutton
 {
-  font-size: 22px;
+    font-size: 22px;
   font-weight: 30;
   color: white; 
   margin-top:-120px;
@@ -264,8 +265,34 @@ input.registerbutton
   background-color: #3a57af; 
   box-shadow: 0 3px rgba(58,87,175,.75); 
   position: relative; 
-}
+}}
 input.registerbutton:hover {
+  top: 3px;
+  background-color:#2e458b 
+  box-shadow: none;
+  
+}
+input.searchbutton
+{
+  font-size: 22px;
+  font-weight: 30;
+  color: white; 
+  margin-top:-90px;
+  margin-left:490px;
+  margin-bottom:10px;
+  padding-top: 10px;
+  padding-right: 20px;
+  padding-bottom: -10px;
+  padding-left: 30px;
+  display: inline-block;
+  text-decoration: none;
+  width: 120px; height: 50px; 
+  border-radius: 5px; 
+  background-color: #3a57af; 
+  box-shadow: 0 3px rgba(58,87,175,.75); 
+  position: relative; 
+}
+input.searchbutton:hover {
   top: 3px;
   background-color:#2e458b 
   box-shadow: none;
