--- a/ContactApp/style1.css
+++ b/ContactApp/style1.css
@@ -109,7 +109,7 @@ hr{
   margin-top:30px;
   margin-bottom:30px;
 }  
-input[type=text],[type=email]{
+input[type=text],[type=email],[type=password]{
   width: 500px; 
   height: 39px;  
   border-radius: 0px 4px 4px 0px/5px 5px 4px 4px; 
@@ -265,7 +265,7 @@ input.registerbutton
   background-color: #3a57af; 
   box-shadow: 0 3px rgba(58,87,175,.75); 
   position: relative; 
-}}
+}
 input.registerbutton:hover {
   top: 3px;
   background-color:#2e458b 
@@ -293,6 +293,32 @@ input.searchbutton
   position: relative; 
 }
 input.searchbutton:hover {
+  top: 3px;
+  background-color:#2e458b 
+  box-shadow: none;
+  
+}
+input.login
+{
+  font-size: 22px;
+  font-weight: 30;
+  color: white; 
+  margin-top:30px;
+  margin-left:490px;
+  margin-bottom:10px;
+  padding-top: 10px;
+  padding-right: 20px;
+  padding-bottom: -10px;
+  padding-left: 30px;
+  display: inline-block;
+  text-decoration: none;
+  width: 120px; height: 50px; 
+  border-radius: 5px; 
+  background-color: #3a57af; 
+  box-shadow: 0 3px rgba(58,87,175,.75); 
+  position: relative; 
+}
+input.login:hover {
   top: 3px;
   background-color:#2e458b 
   box-shadow: none;
